Feat/java 8 (#48)
* java 8

* java 8.

* Update ShirukaEventManager.java

* cache methods.

* Update README.md

* Update README.md

* Update build.gradle.kts

* Update build.gradle.kts

* Update build.gradle.kts

* yaml.

* 8

* 17