@@ -1,11 +1,6 @@
 package tr.com.infumia.event.common.merged;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.IdentityHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
@@ -13,110 +8,53 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiConsumer;
 import java.util.function.BiPredicate;
 import java.util.function.Predicate;
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.RequiredArgsConstructor;
-import lombok.experimental.Accessors;
-import lombok.experimental.FieldDefaults;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import tr.com.infumia.event.common.EventExecutor;
+import tr.com.infumia.event.common.EventManager;
 import tr.com.infumia.event.common.Plugins;
 import tr.com.infumia.event.common.Subscription;
 
-/**
- * a class that represents event listener.
- */
-@Accessors(fluent = true)
 @SuppressWarnings("unchecked")
-@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-final class EventListener<Plugin, Event, Priority, Handled>
-  implements Subscription {
+final class EventListener<Event, Priority, Handled> implements Subscription {
 
-  /**
-   * the active.
-   */
-  AtomicBoolean active = new AtomicBoolean(true);
+  private final AtomicBoolean active = new AtomicBoolean(true);
 
-  /**
-   * the call count.
-   */
-  AtomicLong callCount = new AtomicLong();
+  private final AtomicLong callCount = new AtomicLong();
 
-  /**
-   * the exception consumer.
-   */
   @NotNull
-  BiConsumer<Event, Throwable> exceptionConsumer;
+  private final Predicate<Handled> filter;
 
-  /**
-   * the filters.
-   */
   @NotNull
-  Predicate<Handled>[] filters;
+  private final BiConsumer<Subscription, Handled> handler;
 
-  /**
-   * the handlers.
-   */
   @NotNull
-  BiConsumer<Subscription, Handled>[] handlers;
+  private final Map<
+    Class<? extends Event>,
+    MergedHandlerMapping<? extends Event, Priority, Handled>
+  > mappings;
 
-  /**
-   * the mappings.
-   */
   @NotNull
-  Map<Class<? extends Event>, MergedHandlerMapping<? extends Event, Priority, Handled>> mappings;
+  private final BiPredicate<Subscription, Handled> midExpiryTest;
 
-  /**
-   * the mid-expiry test.
-   */
   @NotNull
-  BiPredicate<Subscription, Handled>[] midExpiryTests;
+  private final BiPredicate<Subscription, Handled> postExpiryTest;
 
-  /**
-   * the plugin.
-   */
-  @Nullable
-  Plugin plugin;
-
-  /**
-   * tee post expiry tests.
-   */
   @NotNull
-  BiPredicate<Subscription, Handled>[] postExpiryTests;
+  private final BiPredicate<Subscription, Handled> preExpiryTest;
 
-  /**
-   * the pre expiry tests.
-   */
   @NotNull
-  BiPredicate<Subscription, Handled>[] preExpiryTests;
+  private final Collection<EventExecutor<?>> registeredEvents = ConcurrentHashMap.newKeySet();
 
-  /**
-   * the registered events.
-   */
-  @NotNull
-  Collection<EventExecutor<?>> registeredEvents = ConcurrentHashMap.newKeySet();
-
-  /**
-   * ctor.
-   *
-   * @param plugin the plugin.
-   * @param getter the getter.
-   * @param handlers the handlers.
-   */
   EventListener(
-    @Nullable final Plugin plugin,
     @NotNull final MergedSubscriptionBuilder.Get<Event, Priority, Handled> getter,
-    @NotNull final List<BiConsumer<Subscription, Handled>> handlers
+    @NotNull final BiConsumer<Subscription, Handled> handler
   ) {
     this.mappings = Collections.unmodifiableMap(getter.mappings());
-    this.exceptionConsumer = getter.exceptionConsumer();
-    this.filters = getter.filters().toArray(Predicate[]::new);
-    this.preExpiryTests = getter.preExpiryTests().toArray(BiPredicate[]::new);
-    this.midExpiryTests = getter.midExpiryTests().toArray(BiPredicate[]::new);
-    this.postExpiryTests = getter.postExpiryTests().toArray(BiPredicate[]::new);
-    this.handlers = handlers.toArray(BiConsumer[]::new);
-    this.plugin = plugin;
+    this.filter = getter.filter();
+    this.preExpiryTest = getter.preExpiryTest();
+    this.midExpiryTest = getter.midExpiryTest();
+    this.postExpiryTest = getter.postExpiryTest();
+    this.handler = handler;
   }
 
   @Override
@@ -134,9 +72,9 @@ final class EventListener<Plugin, Event, Priority, Handled>
     if (!this.active.getAndSet(false)) {
       return;
     }
-    final var manager = Plugins.manager();
-    for (final var event : this.registeredEvents) {
-      manager.unregister(this.plugin, event);
+    final EventManager<Object, Object> manager = Plugins.manager();
+    for (final EventExecutor<?> event : this.registeredEvents) {
+      manager.unregister(event);
     }
   }
 
@@ -145,116 +83,91 @@ final class EventListener<Plugin, Event, Priority, Handled>
     return !this.active.get();
   }
 
-  /**
-   * registers the event.
-   */
   @NotNull
   Subscription register() {
-    final var registered = new IdentityHashMap<Class<?>, Priority>();
+    final IdentityHashMap<Class<?>, Priority> registered = new IdentityHashMap<>();
     this.mappings.forEach((eventClass, mapping) -> {
-        final var priority = mapping.priority();
-        final var existing = registered.put(eventClass, priority);
+        final Priority priority = mapping.priority();
+        final Priority existing = registered.put(eventClass, priority);
         if (existing != null) {
           if (existing != priority) {
             throw new RuntimeException(
-              "Unable to register the same event with different priorities: %s --> %s".formatted(
-                  eventClass,
-                  eventClass
-                )
+              String.format(
+                "Unable to register the same event with different priorities: %s",
+                eventClass
+              )
             );
           }
           return;
         }
-        final var cls = (Class<Event>) eventClass;
-        final var executor = new Executor<>(cls, this);
-        this.registeredEvents.add(
-            Plugins.manager().register(this.plugin, cls, priority, executor)
-          );
+        final Class<Event> cls = (Class<Event>) eventClass;
+        final Executor executor = new Executor(cls);
+        this.registeredEvents.add(Plugins.manager().register(cls, priority, executor));
       });
     return this;
   }
 
-  /**
-   * a class that represents event executors.
-   */
-  @RequiredArgsConstructor(access = AccessLevel.PRIVATE)
-  @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-  private static final class Executor<Plugin, Event, Priority, Handled>
-    implements EventExecutor<Event> {
+  private final class Executor implements EventExecutor<Event> {
 
-    /**
-     * the event class.
-     */
-    @Getter
     @NotNull
-    Class<Event> eventClass;
+    private final Class<Event> eventClass;
 
-    /**
-     * the native executor.
-     */
-    AtomicReference<Object> nativeExecutor = new AtomicReference<>();
+    private final AtomicReference<Object> nativeExecutor = new AtomicReference<>();
 
-    /**
-     * the parent.
-     */
+    Executor(@NotNull final Class<Event> eventClass) {
+      this.eventClass = eventClass;
+    }
+
     @NotNull
-    EventListener<Plugin, Event, Priority, Handled> parent;
+    @Override
+    public Class<? extends Event> eventClass() {
+      return this.eventClass;
+    }
 
     @Override
     public void execute(@NotNull final Event event) {
-      final var mapping = this.parent.mappings.get(event.getClass());
+      final MergedHandlerMapping<Event, Priority, Handled> mapping = (MergedHandlerMapping<
+          Event,
+          Priority,
+          Handled
+        >) EventListener.this.mappings.get(event.getClass());
       if (mapping == null) {
         return;
       }
-      final var function = mapping.mapping();
-      if (!this.parent.active.get()) {
-        Plugins.manager().unregister(this.parent.plugin, this);
+      if (!EventListener.this.active.get()) {
+        Plugins.manager().unregister(this);
         return;
       }
-      final var handledInstance = function.apply(event);
-      for (final var test : this.parent.preExpiryTests) {
-        if (test.test(this.parent, handledInstance)) {
-          Plugins.manager().unregister(this.parent.plugin, this);
-          this.parent.active.set(false);
-          return;
-        }
+      final Handled handledInstance = mapping.map(event);
+      if (EventListener.this.preExpiryTest.test(EventListener.this, handledInstance)) {
+        Plugins.manager().unregister(this);
+        EventListener.this.active.set(false);
+        return;
       }
       try {
-        for (final var filter : this.parent.filters) {
-          if (!filter.test(handledInstance)) {
-            return;
-          }
-        }
-        for (final var test : this.parent.midExpiryTests) {
-          if (test.test(this.parent, handledInstance)) {
-            Plugins.manager().unregister(this.parent.plugin, this);
-            this.parent.active.set(false);
-            return;
-          }
-        }
-        for (final var handler : this.parent.handlers) {
-          handler.accept(this.parent, handledInstance);
-        }
-        this.parent.callCount.incrementAndGet();
-      } catch (final Throwable t) {
-        this.parent.exceptionConsumer.accept(event, t);
-      }
-      for (final var test : this.parent.postExpiryTests) {
-        if (test.test(this.parent, handledInstance)) {
-          Plugins.manager().unregister(this.parent.plugin, this);
-          this.parent.active.set(false);
+        if (!EventListener.this.filter.test(handledInstance)) {
           return;
         }
+        if (EventListener.this.midExpiryTest.test(EventListener.this, handledInstance)) {
+          Plugins.manager().unregister(this);
+          EventListener.this.active.set(false);
+          return;
+        }
+        EventListener.this.handler.accept(EventListener.this, handledInstance);
+        EventListener.this.callCount.incrementAndGet();
+      } catch (final Throwable t) {
+        mapping.failed(event, t);
+      }
+      if (EventListener.this.postExpiryTest.test(EventListener.this, handledInstance)) {
+        Plugins.manager().unregister(this);
+        EventListener.this.active.set(false);
       }
     }
 
     @NotNull
     @Override
     public Object nativeExecutor() {
-      return Objects.requireNonNull(
-        this.nativeExecutor.get(),
-        "native executor"
-      );
+      return Objects.requireNonNull(this.nativeExecutor.get(), "native executor");
     }
 
     @Override
